--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto de Estudo | Criado na semana NWL - Rockeatseat com NodeJs e React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/VitorBassDev/nlwBooster-ecoleta-rocketseat#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "-": "0.0.1",
+    "D": "^1.0.0",
+    "express": "^4.17.1",
+    "ts-node-dev": "^1.0.0-pre.47"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.6",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   }
 }
