--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Projeto de Estudo | Criado na semana NWL - Rockeatseat com NodeJs e React",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "knex:migrate": "npx knex migrate:latest --knexfile knexfile.ts migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,9 @@
     "-": "0.0.1",
     "D": "^1.0.0",
     "express": "^4.17.1",
+    "knex": "^0.21.1",
+    "sqlite": "^4.0.11",
+    "sqlite3": "^4.2.0",
     "ts-node-dev": "^1.0.0-pre.47"
   },
   "devDependencies": {
