--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "Projeto de Estudo | Criado na semana NWL - Rockeatseat com NodeJs e React",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
-    "knex:migrate": "npx knex migrate:latest --knexfile knexfile.ts migrate:latest"
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "knex:seed": "knex --knexfile knexfile.ts seed:run",
+    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "D": "^1.0.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
+    "nodemon": "^2.0.4",
     "sqlite": "^4.0.11",
     "sqlite3": "^4.2.0",
     "ts-node-dev": "^1.0.0-pre.47"
