--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto de Estudo | Criado na semana NWL - Rockeatseat com NodeJs e React",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
     "knex:seed": "knex --knexfile knexfile.ts seed:run",
     "knex:migrate": "knex migrate:latest --knexfile knexfile.ts migrate:latest"
   },
