--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/VitorBassDev/nlwBooster-ecoleta-rocketseat#readme",
   "dependencies": {
     "-": "0.0.1",
+    "@types/cors": "^2.8.6",
     "D": "^1.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "nodemon": "^2.0.4",
