--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "sqlite": "^4.0.11",
     "sqlite3": "^4.2.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/multer": "^1.4.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   }
